--- a/app/assets/css/phoenix.css
+++ b/app/assets/css/phoenix.css
@@ -51,6 +51,18 @@ body {
     -moz-osx-font-smoothing:grayscale;
 }
 
+nav {
+    position: absolute;
+    top: 0;
+    right: 0;
+    font-family: "Mallory";
+    font-size: 1rem;
+    margin-top: 0.5em;
+    vertical-align:baseline;
+    margin-right: 15px;
+}
+    
+
 .main-body{
    padding: 0 1rem 1rem 1rem;
 }
