--- a/app/lib/app_web/templates/layout/app.html.eex
+++ b/app/lib/app_web/templates/layout/app.html.eex
@@ -23,19 +23,17 @@
         <a href="/">
         <div class="row">
             <div class="column">
-                Yale Course Q&amp;A
+                Yale Chat
             </div>
         </div>
         </a>
-
-        <nav role="navigation">
-          <ul>
+        <nav class="navigation">
             <%= if is_nil(@conn.private.plug_session["uid"]) do %>
-                <li><a href="/auth/cas">Log In</a></li>
+                <span><a href="/auth/cas">Log In</a></span>
             <% else %>
-              <li><%= link @conn.private.plug_session["uid"], to: Routes.user_path(@conn, :show, @conn.assigns.current_user) %></li>
+              <span><%= link @conn.private.plug_session["uid"], to: Routes.user_path(@conn, :show, @conn.assigns.current_user) %></span>
             <% end %>
-          </ul>
+            <span uk-icon="icon: user; ratio: 0.7" class="icon"></span>
         </nav>
 
       </section>
