--- a/app/lib/app_web/templates/submission/form.html.eex
+++ b/app/lib/app_web/templates/submission/form.html.eex
@@ -1,27 +1,43 @@
-<%= form_for @changeset, @action, fn f -> %>
+<%= xform_for @changeset, @action, fn f -> %>
   <%= if @changeset.action do %>
     <div class="alert alert-danger">
       <p>Oops, something went wrong! Please check the errors below.</p>
     </div>
   <% end %>
 
-  <%= label f, :title %>
-  <%= text_input f, :title %>
-  <%= error_tag f, :title %>
-
-  <%= label f, :description %>
-  <%= text_input f, :description %>
-  <%= error_tag f, :description %>
-
-  <%= label f, :slug %>
-  <%= text_input f, :slug %>
-  <%= error_tag f, :slug %>
-
-  <%= label f, :image_url %>
-  <%= text_input f, :image_url %>
-  <%= error_tag f, :image_url %>
-
-  <div>
-    <%= submit "Save" %>
+<div class="uk-margin">
+  <%= label f, :title, class: "uk-form-label" %>
+  <div class="uk-form-controls">
+      <%= text_input f, :title, class: "uk-input" %>
+      <%= error_tag f, :title %>
   </div>
+</div>
+
+<div class="uk-margin">
+  <%= label f, :description %>
+  <div class="uk-form-controls">
+      <%= textarea f, :description, class: "uk-textarea" %>
+      <%= error_tag f, :description %>
+  </div>
+</div>
+
+<div class="uk-margin">
+  <%= label f, :slug %>
+  <div class="uk-form-controls">
+  <%= text_input f, :slug, class: "uk-input" %>
+  <%= error_tag f, :slug %>
+  </div>
+</div>
+
+<div class="uk-margin">
+  <%= label f, :image_url %>
+  <div class="uk-form-controls">
+  <%= text_input f, :image_url, class: "uk-input" %>
+  <%= error_tag f, :image_url %>
+  </div>
+</div>
+
+<div class="uk-margin">
+    <%= submit "Save", class: "uk-button-secondary uk-button" %>
+</div>
 <% end %>
