--- a/app/lib/app_web/templates/submission/show.html.eex
+++ b/app/lib/app_web/templates/submission/show.html.eex
@@ -1,8 +1,12 @@
 <div class="uk-margin-bottom">
     <div class="uk-padding-small submission-body">
         <h1 class="uk-heading-divider"><%= @submission.title %></h1>
-        <img src="<%= @submission.image_url %>">
-        <p><%= @submission.description %></p>
+        <% if !is_nil(@submission.image_url) do %>        
+            <img src="<%= @submission.image_url %>">
+        <% end %>
+        <%= for para <- split_newlines(@submission.description) do %>
+            <p><%= para %></p>
+        <% end %>
         <div class="submission-stats">
             <%= if @topic.anonymous do %>
             <% else %>
